Also --enable-preview for tests